[tool.poetry]
name = "Improv Utilities"
version = "0.1.0"
description = ""
authors = ['Jamnes Salvatore <jimmy.c.salvatore@gmail.com>']
license = "LICENSE"
readme = "README.md"
packages = [{ include = "improvutilities" }]

[tool.poetry.dependencies]
boto3 = "^1.28.11"
ipykernel = "^6.25.0"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
python = "^3.10"
requests = "^2.31.0"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mkdocs = "^1.4.3"
mkdocs-autorefs = "^0.4.1"
mkdocs-material = "^9.1.18"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"
mypy = "^1.4.1"
pytest = "^7.4.0"
ruff = "^0.0.277"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# https://github.com/astral-sh/ruff

select = [
    "A",
    "AIR",
    "B",
    "C",
    "C4",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "G",
    "I",
    "N",
    "NPY",
    "PD",
    "PL",
    "PT",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package.
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__.
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start on the first line.
    "D417", # Requires documentation for every function parameter.
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []

# Group violations by containing file.
format = "grouped"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "tests",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.black]
# https://github.com/psf/black
line-length = 88
target-version = ['py310']

[tool.mypy]
plugins = ['numpy.typing.mypy_plugin']

warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = false
